# data-science-for-business

./: .gitignore  README.md  pyproject.toml
1. Human Resources Data/: hr_department.ipynb
2. Marketing Department/: marketing_department.ipynb
3. Sales Department Data/: sales_department.ipynb
4. Operations Department/wandb/: latest-run
4. Operations Department/wandb/run-20240408_082606-o8dovpqv/: run-o8dovpqv.wandb
4. Operations Department/wandb/run-20240408_083107-nz2063k1/: run-nz2063k1.wandb
4. Operations Department/wandb/run-20240408_084401-bdxasnkj/: run-bdxasnkj.wandb
4. Operations Department/wandb/run-20240408_084632-4cticswf/: run-4cticswf.wandb
4. Operations Department/wandb/run-20240408_084854-esw1edhr/: run-esw1edhr.wandb
4. Operations Department/wandb/run-20240408_084925-tlb8f8vp/: run-tlb8f8vp.wandb
4. Operations Department/wandb/run-20240408_091213-h0w0ojzf/: run-h0w0ojzf.wandb
4. Operations Department/wandb/run-20240408_104936-dxw0ts03/: run-dxw0ts03.wandb
4. Operations Department/wandb/run-20240408_140313-dfogpjdb/: run-dfogpjdb.wandb
4. Operations Department/wandb/run-20240408_140510-8rfdnvle/: run-8rfdnvle.wandb
4. Operations Department/wandb/run-20240408_143543-8qqe88xg/: run-8qqe88xg.wandb
4. Operations Department/wandb/run-20240409_173721-uo18n3ud/: run-uo18n3ud.wandb
4. Operations Department/wandb/run-20240409_173742-7om2lgwn/: run-7om2lgwn.wandb
4. Operations Department/wandb/run-20240409_174315-5ukx788b/: run-5ukx788b.wandb
5. Public Relations Department/: public_relations.ipynb
(+111 files in other folders)
